scripts/nullaway/original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8.txt
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/PeerboxFile.java:28: error: [NullAway] initializer method does not guarantee @NonNull field checksum (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PeerboxFile(String filename, Peer owner, File file) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/PeerboxFile.java:21: error: [NullAway] assigning @Nullable expression to @NonNull field
	private transient File file = null;
	                       ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/PeerboxFile.java:25: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		this(filename, owner, null);
		                      ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/Peer.java:14: error: [NullAway] @NonNull field address not initialized
	private InetAddress address;
	                    ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/Peer.java:16: error: [NullAway] @NonNull field name not initialized
	private String name;
	               ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/messaging/Message.java:71: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return message;
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/messaging/Message.java:92: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/VirtualFileSystem.java:33: error: [NullAway] initializer method does not guarantee @NonNull field filelist (line 27) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private VirtualFileSystem(final Context ctx) {
	        ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/VirtualFileSystem.java:246: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
									f.setFile(null);
									          ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/Filelist.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return filelist;
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/RemoteHostManager.java:50: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return hosts.get(id);
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/ui/FileView.java:31: error: [NullAway] initializer method does not guarantee @NonNull field model (line 24) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public FileView(Composite parent) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/ui/PeerView.java:25: error: [NullAway] initializer method does not guarantee @NonNull field model (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PeerView(Composite parent) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/MD5Util.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/MD5Util.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return md5;
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/MD5Util.java:38: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/MD5Util.java:54: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return md5;
				^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/MD5Util.java:59: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return md5;
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/FileRequestTask.java:103: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				file.setFile(null);
				             ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/PeerManager.java:66: error: [NullAway] passing @Nullable parameter 'peers.get(hostID)' where @NonNull is required
				l.joined(new PeerHost(hostID, peers.get(hostID)));
				                                       ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/PeerManager.java:88: error: [NullAway] passing @Nullable parameter 'peers.get(hostID)' where @NonNull is required
			peerHosts.add(new PeerHost(hostID, peers.get(hostID)));
			                                            ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/Peerbox.java:50: error: [NullAway] initializer method does not guarantee @NonNull field fs (line 39) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Peerbox() {
	        ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Receiver.java:28: error: [NullAway] initializer method does not guarantee @NonNull field thread (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Receiver(ReliableMulticast group) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Receiver.java:179: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/ReliableMulticast.java:39: error: [NullAway] initializer method does not guarantee @NonNull fields sender (line 28), receiver (line 30), listener (line 31), hostManager (line 37) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private ReliableMulticast(InetAddress address, int port,
	        ^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/ReliableMulticast.java:82: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Sender.java:28: error: [NullAway] initializer method does not guarantee @NonNull field thread (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	Sender(ReliableMulticast group) {
	^
    (see http://t.uber.com/nullaway )
27 errors
